--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,5 @@ pillow==10.1.0
 matplotlib==3.8.2
 pandas==2.1.3
 python-dateutil==2.8.2
-pytz==2023.3.post1 
+pytz==2023.3.post1
+linkedin-api==2.0.0 
