--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,128 @@
-entorno/
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Django
+*.log
+local_settings.py
 db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
+
+# Entornos virtuales
+env/
+venv/
+ENV/
+.env
+
+# IDEs y editores
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+.settings/
+
+# Archivos de sistema
+.DS_Store
+Thumbs.db
+
+# Archivos de la aplicación
+data/
+cache/
+backup/
+temp/
+modelos/
+*.pkl
+*.h5
+*.joblib
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Archivos de dependencias
+node_modules/
+bower_components/
+
+# Archivos de compilación
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+
+# Archivos de prueba
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# Archivos de documentación
+docs/_build/
+site/
+
+# Archivos de configuración local
+local_settings.py
+instance/
+.webassets-cache
+
+# Archivos de base de datos
+*.sqlite3
+*.db
+
+# Archivos de respaldo
+*.bak
+*.backup
+*~
+
+# Archivos temporales
+tmp/
+temp/
+
+# Virtual Environment
+env/
+venv/
+ENV/
+
+# PyQt
+*.ui.autosave
+
+# Project specific
+chromedriver-win64/
+*.env
+node_modules/
+package-lock.json
+
+# Documentation
+docs/_build/
+docs/_static/
+docs/_templates/
